Bug 730282 - Firefox crash @ mozilla::SignalTracerThread. r=ted.mielczarek.